[tool.poetry]
name = "pythonproject444"
version = "3.8"
description = ""
authors = ["Mykola <bobimyko@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
google-search-results = "^2.4.1"
Flask = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
